Implement full CRUD on Schedule appointments (modal popups). UI changes.

--- a/HealthR/Services/HealthR.Services.Data/HealthR.Services.Data.csproj
+++ b/HealthR/Services/HealthR.Services.Data/HealthR.Services.Data.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
   </ItemGroup>
 
   <ItemGroup>
