Models chenges, add migrations, implement doctor's patients  listing, add and remove....

--- a/HealthR/Services/HealthR.Services.Data/HealthR.Services.Data.csproj
+++ b/HealthR/Services/HealthR.Services.Data/HealthR.Services.Data.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Data\HealthR.Data\HealthR.Data.csproj" />
+    <ProjectReference Include="..\..\HealthR.Common\HealthR.Common.csproj" />
   </ItemGroup>
 
 </Project>
